# AiTrainingApp

./: .gitignore
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: analyzer.py  macro_planner.py  state.py  weekly_planner.py
backend/app/db/: cosmos_client.py
backend/app/routers/: agents.py  user_config.py
backend/app/tools/: date_tool.py  icu_client.py
frontend/: README.md  angular.json  package-lock.json  package.json
